--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,24 @@
     <meta name="twitter:title" content="{{ page.title | default: site.defaults.title }}">
     <meta name="twitter:description" content="{{ page.description | default: site.defaults.description }}">
     <meta name="twitter:image" content="{{ page.thumbnail | default: site.defaults.thumbnail }}">
+    <!-- PWA -->
+    <link href='/assets/icons/apple-icon-57x57.png' rel='apple-touch-icon' sizes='57x57'>
+    <link href='/assets/icons/apple-icon-60x60.png' rel='apple-touch-icon' sizes='60x60'>
+    <link href='/assets/icons/apple-icon-72x72.png' rel='apple-touch-icon' sizes='72x72'>
+    <link href='/assets/icons/apple-icon-76x76.png' rel='apple-touch-icon' sizes='76x76'>
+    <link href='/assets/icons/apple-icon-114x114.png' rel='apple-touch-icon' sizes='114x114'>
+    <link href='/assets/icons/apple-icon-120x120.png' rel='apple-touch-icon' sizes='120x120'>
+    <link href='/assets/icons/apple-icon-114x114.png' rel='apple-touch-icon' sizes='144x144'>
+    <link href='/assets/icons/apple-icon-152x152.png' rel='apple-touch-icon' sizes='152x152'>
+    <link href='/assets/icons/apple-icon-180x180.png' rel='apple-touch-icon' sizes='180x180'>
+    <link href='/assets/icons/android-icon-192x192.png' rel='icon' sizes='192x192' type='image/png'>
+    <link href='/assets/icons/favicon-32x32.png' rel='icon' sizes='32x32' type='image/png'>
+    <link href='/assets/icons/favicon-96x96.png' rel='icon' sizes='96x96' type='image/png'>
+    <link href='/assets/icons/favicon-16x16.png' rel='icon' sizes='16x16' type='image/png'>
+    <link href='/manifest.json' rel='manifest'>
+    <meta content='#004aad' name='msapplication-TileColor'>
+    <meta content='/assets/icons/ms-icon-144x144.png' name='msapplication-TileImage'>
+    <meta content='#004aad' name='theme-color'>
     <!-- Canonical -->
     <link rel="canonical" hreflang='{{ page.lang | default: site.defaults.lang }}' href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -54,10 +72,6 @@
 <main>
 {{ content }}
 </main>
-{% if site.url contains '?iframev=1' %}
-  <!-- Elemen yang ingin ditampilkan jika parameter ada -->
-  <div>Ini adalah elemen yang ditampilkan karena parameter iframev=1 ada di URL.</div>
-{% endif %}
 {% include footer.html %}
 <script>{% include main.js %}</script>
 </body>
