--- a/_includes/style.css
+++ b/_includes/style.css
@@ -1,6 +1,5 @@
 /* CSS Reset */
-*{transition:.3s ease-in-out;line-height:1.5;scroll-behavior:smooth}
-html{line-height:1.5;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}
+html{transition:.3s ease-in-out;line-height:1.5;scroll-behavior:smooth;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}
 /* Body */
 body{font-family:Arial,sans-serif;background-color:#f4f4f4;color:#333;max-width:900px;margin:0 auto}
 body.dark-mode{background-color:#1e1e1e;color:#f4f4f4}
@@ -11,7 +10,7 @@ a:hover,a:focus,body.darkmode a:hover,body.darkmode a:focus{color:#012345}
 /* Article */
 article{margin:auto .5rem}
 /* Floating Header Navbar */
-.floating-navbar{position:fixed;top:0;left:50%;transform:translateX(-50%);transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;width:100%;max-width:900px;background:#004AAD;padding:1rem 0;box-shadow:0 4px 10px #0000001a;z-index:1000;display:flex;align-items:center;justify-content:space-between;border-radius:0 0 15px 15px;text-transform:capitalize}
+.floating-navbar{position:fixed;top:0;left:50%;transform:translateX(-50%);transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;width:100%;max-width:900px;background:#004AAD;padding:1rem 0;box-shadow:0 4px 10px #0000001a;z-index:2;display:flex;align-items:center;justify-content:space-between;border-radius:0 0 15px 15px;text-transform:capitalize}
 .hamburger-menu{font-size:24px;color:#fff;background:none;border:none;cursor:pointer;margin-left:1rem}
 .brand-name{position:absolute;left:50%;transform:translateX(-50%);font-size:18px;font-weight:700;color:#fff;text-decoration:none;white-space:nowrap;text-transform:uppercase}
 .brand-name a{color:#fff;text-decoration:none}
@@ -22,8 +21,8 @@ article{margin:auto .5rem}
 }
 /* Sidebar Menu */
 #sidebar-toggle{display:none}
-.sidebar{position:fixed;top:0;left:-250px;width:250px;height:100%;background:#333;color:#fff;padding:20px;transition:.3s}
-.overlay{position:fixed;top:0;left:0;width:100%;height:100%;background:#00000080;opacity:0;visibility:hidden;transition:.3s}
+.sidebar{position:fixed;z-index:3;top:0;left:-250px;width:250px;height:100%;background:#333;color:#fff;padding:20px;transition:.3s}
+.overlay{position:fixed;z-index:3;top:0;left:0;width:100%;height:100%;background:#00000080;opacity:0;visibility:hidden;transition:.3s}
 #sidebar-toggle:checked ~ .sidebar{left:0}
 #sidebar-toggle:checked ~ .overlay{opacity:1;visibility:visible}
 /* Top Info */
