--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,5 @@
-<input type='checkbox' id='sidebar-toggle'>
+<input type='checkbox' hidden id='sidebar-toggle'>
 <nav id='sidebar' class='sidebar'>
-    <button id='close-sidebar' class='close-btn'>&times;</button>
     <ul class='menu'>
         {% for link in site.nav_links %}<li><a title='{{ link[0] }}' href='{{ link[1] }}'>{{ link[0] }}</a></li>{% endfor %}
     </ul>
