--- a/_includes/style.css
+++ b/_includes/style.css
@@ -1,5 +1,6 @@
 /* CSS Reset */
 html{transition:.3s ease-in-out;line-height:1.5;scroll-behavior:smooth;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}
+[hidden]{display:none}
 /* Body */
 body{font-family:Arial,sans-serif;background-color:#f4f4f4;color:#333;max-width:900px;margin:0 auto}
 body.dark-mode{background-color:#1e1e1e;color:#f4f4f4}
@@ -20,9 +21,10 @@ article{margin:auto .5rem}
 .floating-navbar{padding:12px 0}
 }
 /* Sidebar Menu */
-#sidebar-toggle{display:none}
-.sidebar{position:fixed;z-index:3;top:0;left:-250px;width:250px;height:100%;background:#333;color:#fff;padding:20px;transition:.3s}
-.overlay{position:fixed;z-index:3;top:0;left:0;width:100%;height:100%;background:#00000080;opacity:0;visibility:hidden;transition:.3s}
+.sidebar{position:fixed;z-index:4;top:0;left:-250px;width:250px;height:100%;background:#004aad;color:#fff;padding:20px}
+.sidebar a{color:#fff;font-weight:bold}
+.sidebar ul{list-style:none}
+.overlay{position:fixed;z-index:3;top:0;left:0;width:100%;height:100%;background:#00000080;opacity:0;visibility:hidden}
 #sidebar-toggle:checked ~ .sidebar{left:0}
 #sidebar-toggle:checked ~ .overlay{opacity:1;visibility:visible}
 /* Top Info */
