--- a/_includes/style.css
+++ b/_includes/style.css
@@ -21,9 +21,10 @@ article{margin:auto .5rem}
 .floating-navbar{padding:12px 0}
 }
 /* Sidebar Menu */
-.sidebar{position:fixed;z-index:4;top:0;left:-250px;width:250px;height:100%;background:#004aad;color:#fff;padding:20px}
+.sidebar{position:fixed;z-index:4;top:0;left:-300px;width:300px;height:100%;background:#004aad;color:#fff;overflow:auto}
 .sidebar a{color:#fff;font-weight:bold}
-.sidebar ul{list-style:none}
+.sidebar ul{list-style:none;padding:1rem}
+.sidebar li{margin:1rem auto}
 .overlay{position:fixed;z-index:3;top:0;left:0;width:100%;height:100%;background:#00000080;opacity:0;visibility:hidden}
 #sidebar-toggle:checked ~ .sidebar{left:0}
 #sidebar-toggle:checked ~ .overlay{opacity:1;visibility:visible}
