--- a/_includes/style.css
+++ b/_includes/style.css
@@ -22,9 +22,11 @@ article{margin:auto .5rem}
 }
 /* Sidebar Menu */
 .sidebar{position:fixed;z-index:4;top:0;left:-300px;width:300px;height:100%;background:#004aad;color:#fff;overflow:auto}
-.sidebar a{color:#fff;font-weight:bold}
-.sidebar ul{list-style:none;padding:1rem}
-.sidebar li{margin:1rem auto}
+.sidebar a{color:#fff;font-weight:700;text-decoration:none;display:block;padding:10px;border-radius:5px;transition:transform .2s ease-in-out,background .3s}
+.sidebar a:hover,.sidebar a:focus{transform:scale(1.1);background:#fff3}
+.sidebar ul{list-style:none;padding:0;margin:1rem 0}
+.sidebar li{margin:.5rem 0;padding:.5rem;background:#ffffff1a;border-radius:8px;transition:background 0.3s,transform .2s}
+.sidebar li:hover{background:#fff3;transform:translateX(5px)}
 .overlay{position:fixed;z-index:3;top:0;left:0;width:100%;height:100%;background:#00000080;opacity:0;visibility:hidden}
 #sidebar-toggle:checked ~ .sidebar{left:0}
 #sidebar-toggle:checked ~ .overlay{opacity:1;visibility:visible}
