--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,8 @@
 <input type='checkbox' hidden id='sidebar-toggle'>
-<nav id='sidebar' class='sidebar'>
+<nav itemscope itemtype='https://schema.org/SiteNavigationElement' id='sidebar' class='sidebar' aria-hidden='true'>
+    <h2>Navigation Links</h2>
     <ul class='menu'>
-        {% for link in site.nav_links %}<li><a title='{{ link[0] }}' href='{{ link[1] }}'>{{ link[0] }}</a></li>{% endfor %}
+        {% for link in site.nav_links %}<li itemprop='name'><a itemprop='url' title='{{ link[0] }}' href='{{ link[1] }}'>{{ link[0] }}</a></li>{% endfor %}
     </ul>
 </nav>
 <label for='sidebar-toggle' class='overlay'></label>
