--- a/_includes/style.css
+++ b/_includes/style.css
@@ -21,7 +21,7 @@ article{margin:auto .5rem}
 .floating-navbar{padding:12px 0}
 }
 /* Sidebar Menu */
-.sidebar{position:fixed;z-index:4;top:0;left:-300px;width:300px;height:100%;background:#004aad;color:#fff;overflow:auto}
+.sidebar{position:fixed;z-index:4;top:0;left:-300px;width:300px;height:100%;background:#004aad;color:#fff;overflow-y:auto}
 .sidebar a{color:#fff;font-weight:700;text-decoration:none;display:block;padding:10px;border-radius:5px;transition:transform .2s ease-in-out,background .3s}
 .sidebar a:hover,.sidebar a:focus{transform:scale(1.1);background:#fff3}
 .sidebar ul{list-style:none;padding:0;margin:1rem 0}
