--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,16 +1,15 @@
 {% if site.disqus_shortname %}
-  <div id="disqus_thread"></div>
-  <script type="text/javascript">
-    var disqus_config = function () {
-      this.page.url = "{{ page.url | absolute_url }}";  // Replace PAGE_URL with your page's canonical URL variable
-      this.page.identifier = "{{ page.url | absolute_url }}";  // Replace PAGE_IDENTIFIER with your page's unique identifier (usually `page.id`)
-    };
-    
-    (function() { 
-      var d = document, s = d.createElement('script');
-      s.src = 'https://' + '{{ site.disqus_shortname }}' + '.disqus.com/embed.js';  
-      s.setAttribute('data-timestamp', +new Date());
-      (d.head || d.body).appendChild(s);
-    })();
-  </script>
+<div id='disqus_thread'></div>
+<script>
+var disqus_config = function () {
+  this.page.url = '{{ page.url | absolute_url }}';
+  this.page.identifier = '{{ page.url | absolute_url }}';
+};
+(function() { 
+  var d = document, s = d.createElement('script');
+  s.src = 'https://' + '{{ site.disqus_shortname }}' + '.disqus.com/embed.js';  
+  s.setAttribute('data-timestamp', +new Date());
+  (d.head || d.body).appendChild(s);
+})();
+</script>
 {% endif %}
