--- a/_includes/style.css
+++ b/_includes/style.css
@@ -1,6 +1,6 @@
 /* CSS Reset */
 html{transition:.3s ease-in-out;line-height:1.5;scroll-behavior:smooth;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}
-}::-webkit-scrollbar{width:10px;height:10px}
+::-webkit-scrollbar{width:10px;height:10px}
 ::-webkit-scrollbar-thumb{background-color:#004AAD;border:.05em solid #004AAD;background-clip:padding-box;cursor:pointer;border-radius:8px;-webkit-border-radius:8px}
 ::-webkit-scrollbar-track{background-color:#000000}
 ::selection{background-color:#004AAD;color:#fff}
