--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html {% if page.amp %}{% else %}amp{% endif %}lang="{{ page.lang | default: site.defaults.lang }}">
+<html lang="{{ page.lang | default: site.defaults.lang }}">
 <head>
     <meta charset='UTF-8'>
     <meta content='IE=EDGE' http-equiv='X-UA-Compatible'>
@@ -56,12 +56,6 @@
     <meta name='dmca-site-verification' content='OWJ0Vk5lWTVjNzRLMWxFcis4NythQT090'>
     <!-- Canonical -->
     <link rel="canonical" hreflang='{{ page.lang | default: site.defaults.lang }}' href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
-    {% if page.amp %}
-    <link rel="amphtml" href="{{ page.url | absolute_url | append: '/amp/' }}">
-{% else %}
-<link rel="canonical" href="{{ page.url | replace: '/amp/', '/' | absolute_url }}">
-{% endif %}
-
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <style>{% include style.css %}</style>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4951061355072034" crossorigin="anonymous"></script>
