--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<input type='checkbox' hidden aria-hidden='true' id='sidebar-toggle'>
+<input type='checkbox' hidden id='sidebar-toggle'>
 <nav itemscope itemtype='https://schema.org/SiteNavigationElement' id='sidebar' class='sidebar' aria-label='Sidebar Menu' aria-hidden='true'>
     <label for='sidebar-toggle' class='close'>&times;</label>
     <h2>Navigation Links</h2>
